# lightgbm-rs

./: Cargo.toml  deps-gpu.sh
lightgbm-sys/: Cargo.toml  build.rs
